Add admin panel; API helper function; improve style

--- a/societies-app/src/App.css
+++ b/societies-app/src/App.css
@@ -1,24 +1,9 @@
 
 body {
   text-align: center;
+  padding: 5px !important;
 }
 
 .login-container img {
   width: 50%;
-}
-
-
-header {
-  font-family: 'Times';
-  font-size: 80px;
-}
-
-h3 {
-  font-family: 'Arial';
-  font-size: 50px;
-}
-
-p{
-  font-family: 'Arial';
-  font-size: 20px;
 }
